# FastAPIBaseApp

./: prek.toml  pyproject.toml  ruff.toml
app/: .env.template  create_app.py  main.py
app/api/: __init__.py
app/core/: config.py
app/core/models/: __init__.py  db.py
app/core/models/mixins/: __init__.py  observable.py
app/dependencies/: __init__.py  infrastructure.py
tests/: conftest.py
tests/constants/: __init__.py  markers.py
tests/support/: __init__.py
